# fastapi-mongo-boilerplate

./: .env-example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: AGGREGATION_PIPELINES.md
helm/fastapi-chart/: Chart.yaml  values.yaml
helm/fastapi-chart/templates/: deployment.yaml  service.yaml
prometheus_data/: prometheus.yml
src/app/: main.py
src/app/api/v1/: __init__.py  aws.py  health.py  local.py  users.py
src/app/core/: config.py  database.py  error_handler.py  exceptions.py  setup.py  storage_provider.py
src/app/models/: __init__.py  base.py  user.py
src/app/repositories/: __init__.py  base.py  user.py
src/app/schema/: responses.py
src/app/services/: __init__.py  aws_service.py  local_storage.py  user.py
src/app/utils/: password.py
tests/: test_aggregation.py  test_health.py  test_password.py  test_user_repository.py
